<resources>
    <string name="app_name">ViewMyRecords</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>


    <string name="individual_tab_text">Individual</string>
    <string name="family_tab_text">Family</string>
    <string name="professional_tab_text">Professional</string>
    <string name="corporate_tab_text">Corporate</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_inbox">Inbox</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


    <!--Error messages for Toast-->
    <string name="toast_error_something_went_wrong">Something went wrong</string>

    <!--Volley Error messages for Toast-->
    <string name="volley_error_authentication">Authentication failure</string>
    <string name="volley_error_server_timeout">Server timeout</string>
    <string name="volley_error_ticket_retrieval_failed">Failed to retrieve ticket</string>
    <string name="volley_error_file_retrieval_failed">Failed to retrieve files</string>
    <string name="volley_error_something_went_wrong">Something went wrong</string>
    <string name="volley_error_internet_not_available">"Internet not available"</string>
    <string name="toast_internet_unavailable">Internet service is not available</string>
    <string name="login_hint_username">User Name</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_corporate_id">Corporate-Id</string>
    <string name="login_hint_professional_id">Professional-Id</string>
    <string name="login_hint_family_id">Family-Id</string>

    <string-array name="list_url_types">
        <item>"STANDARD"</item>
        <item>"CUSTOM"</item>
        <item>"VIEW MY RECORDS"</item>
    </string-array>

    <string-array name="list_permission_types">
        <item>"Select permission"</item>
        <item>"View"</item>
        <item>"Print"</item>
        <item>"Download"</item>
        <item>"Share Further"</item>
    </string-array>

    <string-array name="list_doc_types">
        <item>"Select Document Types"</item>
        <item>"Bill and Warranty Cards"</item>
        <item>"Education"</item>
        <item>"Financial Records"</item>
        <item>"Identity/Address Proof"</item>
        <item>"Individual Records"</item>
        <item>"Insurance"</item>
        <item>"Legal Documents"</item>
        <item>"Medical/HealthCare"</item>
        <item>"Others"</item>
        <item>"Photo/Video"</item>
        <item>"Property Related "</item>
        <item>"Publications"</item>
        <item>"Vehicle Related"</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_index">Indexing</string>
    <string name="email_address">E-mail Address</string>
    <string name="corporate_id">ID</string>
    <string name="volley_info">Android volley is a networking library was introduced to make networking calls much easier, faster without writing tons of code. By default all the volley network calls works asynchronously, so we don’t have to worry about using asynctask anymore.</string>
    <string name="volley_title">Volley</string>
    <string name="volley_link"><a href="https://developer.android.com/training/volley/index.html">Volley Documentation</a></string>
    <string name="firebase_title">Firebase</string>
    <string name="firebase_info">Firebase is a mobile and web application platform with tools and infrastructure designed to help developers build high-quality apps. Firebase is made up of complementary features that developers can mix-and-match to fit their needs.</string>
    <string name="firebase_link"><a href="https://firebase.google.com/">Firebase</a></string>
    <string name="chip_title">Android Chips Edit Text</string>
    <string name="chip_info">Chips in your AutoCompleteTextView on Android</string>
    <string name="chip_link"><a href="https://github.com/klinker41/android-chips">Github</a></string>


</resources>
