<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >
        <AutoCompleteTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="15"
            android:hint="@string/login_hint_username"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tilUsername"
        android:layout_alignStart="@+id/tilUsername"
        android:layout_below="@+id/tilUsername"
        android:layout_marginTop="10dp">

    <AutoCompleteTextView
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tilUsername"
        android:layout_alignStart="@+id/tilUsername"
        android:layout_below="@+id/tilUsername"
        android:ems="15"
        android:hint="@string/email_address"
        android:imeOptions="actionDone"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAccountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tilEmail"
        android:layout_alignStart="@+id/tilEmail"
        android:layout_below="@+id/spDomain"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

    <AutoCompleteTextView
        android:id="@+id/etAccountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tilUsername"
        android:layout_alignStart="@+id/tilUsername"
        android:layout_below="@+id/tilUsername"
        android:ems="15"
        android:hint="@string/corporate_id"
        android:imeOptions="actionDone"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spDomain"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignEnd="@+id/tilAccountId"
        android:layout_alignLeft="@+id/tilAccountId"
        android:layout_alignRight="@+id/tilAccountId"
        android:layout_alignStart="@+id/tilAccountId"
        android:layout_below="@+id/tilEmail"
        android:layout_marginTop="10dp" />

</RelativeLayout>